crates/ruff_python_formatter/src/comments/snapshots/ruff_python_formatter__comments__tests__positional_argument_only_comment_without_following_node.snap
---
source: crates/ruff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: Arguments,
        range: 9..166,
        source: `(⏎`,
    }: {
        "leading": [],
        "dangling": [
            SourceComment {
                text: "# Positional arguments only after here",
                position: OwnLine,
                formatted: false,
            },
            SourceComment {
                text: "# trailing positional argument comment.",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "trailing": [],
    },
    Node {
        kind: Arg,
        range: 15..16,
        source: `a`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# trailing positional comment",
                position: EndOfLine,
                formatted: false,
            },
            SourceComment {
                text: "# Trailing on new line",
                position: OwnLine,
                formatted: false,
            },
        ],
    },
}
